--- a/SVM_Training_on_MNIST_Data.ipynb
+++ b/SVM_Training_on_MNIST_Data.ipynb
@@ -748,16 +748,46 @@
     },
     {
       "metadata": {
+        "id": "uwIt11naGAM4",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### To improve this score, let's tune the SVC hyperparameters using the entire training dataset."
+      ]
+    },
+    {
+      "metadata": {
         "id": "DXnOoJygFXha",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "a132ebd1-1366-469a-f807-e40d7a8b19e2"
       },
       "cell_type": "code",
       "source": [
         "rnd_search_cv.best_estimator_.fit(X_train_scaled, y_train)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SVC(C=2.950743920248147, cache_size=200, class_weight=None, coef0=0.0,\n",
+              "  decision_function_shape='ovr', degree=3, gamma=0.0014406183951122377,\n",
+              "  kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
+              "  shrinking=True, tol=0.001, verbose=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
     },
     {
       "metadata": {
@@ -769,6 +799,30 @@
       "source": [
         "y_pred = rnd_search_cv.best_estimator_.predict(X_train_scaled)\n",
         "accuracy_score(y_train, y_pred)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "cfEOJmjcC4HP",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### This accuracy number looks great! Now let's see how the model performs on the test set."
+      ]
+    },
+    {
+      "metadata": {
+        "id": "jKIJFq4yCvu0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "y_pred = rnd_search_cv.best_estimator_.predict(X_test_scaled)\n",
+        "accuracy_score(y_test, y_pred)"
       ],
       "execution_count": 0,
       "outputs": []
