--- a/SVM_Training_on_MNIST_Data.ipynb
+++ b/SVM_Training_on_MNIST_Data.ipynb
@@ -793,15 +793,32 @@
       "metadata": {
         "id": "wBdN3JznFhVK",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3428a483-16b7-4f76-95ea-5119ca86beea"
       },
       "cell_type": "code",
       "source": [
         "y_pred = rnd_search_cv.best_estimator_.predict(X_train_scaled)\n",
         "accuracy_score(y_train, y_pred)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.99555"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
     },
     {
       "metadata": {
@@ -817,15 +834,42 @@
       "metadata": {
         "id": "jKIJFq4yCvu0",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3f7e0146-aade-4f5f-fc16-ee64a5862d39"
       },
       "cell_type": "code",
       "source": [
         "y_pred = rnd_search_cv.best_estimator_.predict(X_test_scaled)\n",
         "accuracy_score(y_test, y_pred)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9724"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "uDXIzEgfIJSb",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Not too bad, but it appears the model is slightly overfitting the training set.  We could adjust the hyperparameters slightly to fix this....  . However, since the accuracies between the train and test sets are quite close, we will consder the mission accomplished!"
+      ]
     }
   ]
 }
