--- a/LA_Parking_Citation_Analysis.ipynb
+++ b/LA_Parking_Citation_Analysis.ipynb
@@ -727,7 +727,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### Let's get value counts for all the categorical variables..."
+        "### Let's get the Top 20 value counts for each of the categorical variables..."
       ]
     },
     {
@@ -736,9 +736,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 8432
+          "height": 3145
         },
-        "outputId": "bb992c81-8d13-41b2-de7b-5db3791ec874"
+        "outputId": "5ce100ca-7f29-431f-9dae-e8677cadb217"
       },
       "cell_type": "code",
       "source": [
@@ -746,9 +746,9 @@
         "cat_columns = ['RP State Plate','Make','Body Style','Color','Route','Agency','Violation code','Violation Description']\n",
         "\n",
         "for col in cat_columns:\n",
-        "  print(df_cat[col].value_counts(),'\\n\\n')"
+        "  print(df_cat[col].value_counts().head(20),'\\n\\n')"
       ],
-      "execution_count": 55,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,48 +773,7 @@
             "TN      11251\n",
             "VA      10496\n",
             "MA       9428\n",
-            "MO       9054\n",
-            "MD       8925\n",
-            "OK       8777\n",
-            "NC       8617\n",
-            "MN       8445\n",
-            "NM       8327\n",
-            "MX       7416\n",
-            "LA       6462\n",
-            "WI       5885\n",
-            "CT       5213\n",
-            "       ...   \n",
-            "RI       1292\n",
-            "DC       1266\n",
-            "AK       1157\n",
-            "SD       1137\n",
-            "DE        973\n",
-            "ND        923\n",
-            "VT        818\n",
-            "QU        750\n",
-            "WV        698\n",
-            "DD        478\n",
-            "US        400\n",
-            "FN        363\n",
-            "NB        172\n",
-            "CN        165\n",
-            "MB        152\n",
-            "SA        151\n",
-            "XX        127\n",
-            "NS         66\n",
-            "CZ         37\n",
-            "VI         34\n",
-            "GU         26\n",
-            "PR         19\n",
-            "PE         19\n",
-            "TT         18\n",
-            "NW         18\n",
-            "AS         16\n",
-            "NF         13\n",
-            "YU          8\n",
-            "|           2\n",
-            "ML          1\n",
-            "Name: RP State Plate, Length: 78, dtype: int64 \n",
+            "Name: RP State Plate, dtype: int64 \n",
             "\n",
             "\n",
             "TOYT    1448598\n",
@@ -837,48 +796,7 @@
             "CHRY     114816\n",
             "INFI     113395\n",
             "ACUR     105620\n",
-            "SUBA      94336\n",
-            "VOLV      84411\n",
-            "TOYO      80406\n",
-            "MITS      75703\n",
-            "CADI      68366\n",
-            "MNNI      61885\n",
-            "LNDR      47130\n",
-            "PORS      44518\n",
-            "FRHT      42241\n",
-            "UNK       41359\n",
-            "         ...   \n",
-            "BOAE          1\n",
-            "VOUK          1\n",
-            "DOLF          1\n",
-            "MISS          1\n",
-            "KAWZ          1\n",
-            "MRCB          1\n",
-            "RROC          1\n",
-            "TOGA          1\n",
-            "JD            1\n",
-            "NMAC          1\n",
-            "AZTX          1\n",
-            "CMPP          1\n",
-            "MEC           1\n",
-            "WMBG          1\n",
-            "HRLE          1\n",
-            "COST          1\n",
-            "ALLM          1\n",
-            "PLY           1\n",
-            "VER           1\n",
-            "LENE          1\n",
-            "MEZD          1\n",
-            "GRAM          1\n",
-            "JL            1\n",
-            "ANMN          1\n",
-            "FOU           1\n",
-            "PVR           1\n",
-            "KEST          1\n",
-            "FLXZ          1\n",
-            "WABG          1\n",
-            "BEUL          1\n",
-            "Name: Make, Length: 2142, dtype: int64 \n",
+            "Name: Make, dtype: int64 \n",
             "\n",
             "\n",
             "PA    7693188\n",
@@ -901,48 +819,7 @@
             "SW        228\n",
             "JE        212\n",
             "TT        137\n",
-            "CH        130\n",
-            "4D        110\n",
-            "HS        102\n",
-            "2D         93\n",
-            "LI         92\n",
-            "VA         83\n",
-            "SC         69\n",
-            "VV         67\n",
-            "TX         65\n",
-            "SV         64\n",
-            "       ...   \n",
-            "PS          1\n",
-            "CG          1\n",
-            "P9          1\n",
-            "4R          1\n",
-            "MU          1\n",
-            "V9          1\n",
-            "Z           1\n",
-            "BI          1\n",
-            "38          1\n",
-            "16          1\n",
-            "RH          1\n",
-            "SI          1\n",
-            "US          1\n",
-            "CE          1\n",
-            "CU          1\n",
-            "AP          1\n",
-            "LB          1\n",
-            "MK          1\n",
-            "PC          1\n",
-            "FB          1\n",
-            "AC          1\n",
-            "4L          1\n",
-            "05          1\n",
-            "UU          1\n",
-            "ED          1\n",
-            "Q5          1\n",
-            "A3          1\n",
-            "ET          1\n",
-            "WI          1\n",
-            "EL          1\n",
-            "Name: Body Style, Length: 193, dtype: int64 \n",
+            "Name: Body Style, dtype: int64 \n",
             "\n",
             "\n",
             "BK    1884847\n",
@@ -965,48 +842,7 @@
             "OR      25261\n",
             "GR      18745\n",
             "PR      16069\n",
-            "TA       9231\n",
-            "BR       6280\n",
-            "UN       6177\n",
-            "MA       3978\n",
-            "TU       3922\n",
-            "CO       3502\n",
-            "BU       2549\n",
-            "BE       1604\n",
-            "PK       1386\n",
-            "PU        700\n",
-            "       ...   \n",
-            "WE          1\n",
-            "MI          1\n",
-            "MD          1\n",
-            "EF          1\n",
-            "LI          1\n",
-            "SO          1\n",
-            "VO          1\n",
-            "MP          1\n",
-            "IN          1\n",
-            "R           1\n",
-            "LA          1\n",
-            "WR          1\n",
-            "UK          1\n",
-            "SV          1\n",
-            "PW          1\n",
-            "KA          1\n",
-            "PP          1\n",
-            "ES          1\n",
-            "TR          1\n",
-            "MY          1\n",
-            "IV          1\n",
-            "WA          1\n",
-            "SH          1\n",
-            "O           1\n",
-            "AP          1\n",
-            "CU          1\n",
-            "BC          1\n",
-            "OG          1\n",
-            "GE          1\n",
-            "LE          1\n",
-            "Name: Color, Length: 106, dtype: int64 \n",
+            "Name: Color, dtype: int64 \n",
             "\n",
             "\n",
             "00600    517425\n",
@@ -1029,48 +865,7 @@
             "00472     54208\n",
             "00141     51984\n",
             "00441     48722\n",
-            "00672     47553\n",
-            "00442     46449\n",
-            "00642     45493\n",
-            "00476     44945\n",
-            "00667     44911\n",
-            "00473     43758\n",
-            "00477     43583\n",
-            "00610     43020\n",
-            "00361     42769\n",
-            "00445     42437\n",
-            "          ...  \n",
-            "CR07          1\n",
-            "A31           1\n",
-            "6FR1          1\n",
-            "6Q31          1\n",
-            "209A7         1\n",
-            "8X9C          1\n",
-            "21LSW         1\n",
-            "3E4           1\n",
-            "M7            1\n",
-            "13H26         1\n",
-            "20A22         1\n",
-            "14525         1\n",
-            "7AIW2         1\n",
-            "3L315         1\n",
-            "A52           1\n",
-            "FBL6          1\n",
-            "58A5          1\n",
-            "16A98         1\n",
-            "2C20          1\n",
-            "14S16         1\n",
-            "24Q96         1\n",
-            "6V34          1\n",
-            "TRAFF         1\n",
-            "5A89          1\n",
-            "05083         1\n",
-            "06111         1\n",
-            "01456         1\n",
-            "3C153         1\n",
-            "38MQ8         1\n",
-            "20A91         1\n",
-            "Name: Route, Length: 8482, dtype: int64 \n",
+            "Name: Route, dtype: int64 \n",
             "\n",
             "\n",
             "54.0    2156794\n",
@@ -1093,30 +888,6 @@
             "5.0          61\n",
             "50.0         30\n",
             "59.0         30\n",
-            "6.0          19\n",
-            "12.0         13\n",
-            "60.0         11\n",
-            "77.0          7\n",
-            "52.0          6\n",
-            "9.0           5\n",
-            "7.0           4\n",
-            "15.0          4\n",
-            "24.0          3\n",
-            "35.0          3\n",
-            "45.0          2\n",
-            "8.0           2\n",
-            "16.0          1\n",
-            "30.0          1\n",
-            "13.0          1\n",
-            "42.0          1\n",
-            "32.0          1\n",
-            "10.0          1\n",
-            "43.0          1\n",
-            "71.0          1\n",
-            "70.0          1\n",
-            "68.0          1\n",
-            "61.0          1\n",
-            "38.0          1\n",
             "Name: Agency, dtype: int64 \n",
             "\n",
             "\n",
@@ -1140,112 +911,30 @@
             "4000A1        86992\n",
             "22500F        79637\n",
             "22502A        76520\n",
-            "80.73.2       74644\n",
-            "22514         68356\n",
-            "22500H        57751\n",
-            "88.03A        53969\n",
-            "88.63B+       45695\n",
-            "8056E4        39856\n",
-            "80.69.2       38030\n",
-            "5204A         26133\n",
-            "8069B         19326\n",
-            "8813B         18035\n",
-            "             ...   \n",
-            "22500E#           2\n",
-            "8055A2            2\n",
-            "22511             2\n",
-            "26709A            2\n",
-            "005               1\n",
-            "8049#             1\n",
-            "576               1\n",
-            "8944C             1\n",
-            "8025B             1\n",
-            "27465B            1\n",
-            "1564280           1\n",
-            "8935              1\n",
-            "80362             1\n",
-            "21113C            1\n",
-            "1564230           1\n",
-            "575               1\n",
-            "8073C             1\n",
-            "6344B16           1\n",
-            "8073B2F           1\n",
-            "8813B#            1\n",
-            "8704              1\n",
-            "039               1\n",
-            "22513             1\n",
-            "1564340           1\n",
-            "80725             1\n",
-            "027               1\n",
-            "22526C            1\n",
-            "8056W#            1\n",
-            "047               1\n",
-            "225001D           1\n",
-            "Name: Violation code, Length: 297, dtype: int64 \n",
+            "Name: Violation code, dtype: int64 \n",
             "\n",
             "\n",
-            "NO PARK/STREET CLEAN              2536150\n",
-            "METER EXP.                        1528072\n",
-            "RED ZONE                           648248\n",
-            "PREFERENTIAL PARKING               600951\n",
-            "DISPLAY OF TABS                    537228\n",
-            "NO PARKING                         390977\n",
-            "DISPLAY OF PLATES                  240181\n",
-            "WHITE ZONE                         195525\n",
-            "NO STOP/STANDING                   157676\n",
-            "PARKED OVER TIME LIMIT             154800\n",
-            "PARKED OVER TIME LIM               136763\n",
-            "STANDNG IN ALLEY                   122417\n",
-            "BLOCKING DRIVEWAY                  109056\n",
-            "STOP/STAND PROHIBIT                 96655\n",
-            "YELLOW ZONE                         92244\n",
-            "NO STOP/STAND                       89283\n",
-            "NO EVIDENCE OF REG                  86992\n",
-            "PARKED ON SIDEWALK                  79643\n",
-            "18 IN. CURB/2 WAY                   76527\n",
-            "EXCEED 72HRS-ST                     74644\n",
-            "FIRE HYDRANT                        68358\n",
-            "DOUBLE PARKING                      57758\n",
-            "OUTSIDE LINES/METER                 53969\n",
-            "NO STOPPING/ANTI-GRIDLOCK ZONE      53170\n",
-            "OFF STR/OVERTIME/MTR                45716\n",
-            "NO STOPPING/ANTI-GRI                40488\n",
-            "EXPIRED TAGS                        26133\n",
-            "COMM VEH OVER TIME LIMIT            20170\n",
-            "PRIVATE PROPERTY                    18436\n",
-            "METER EXPIRED                       18041\n",
-            "                                   ...   \n",
-            "21367C                                  1\n",
-            "5205A                                   1\n",
-            "8363                                    1\n",
-            "8502A2                                  1\n",
-            "2265D                                   1\n",
-            "8935C                                   1\n",
-            "12003A                                  1\n",
-            "26700A                                  1\n",
-            "22650                                   1\n",
-            "5977A                                   1\n",
-            "22650H                                  1\n",
-            "8061A                                   1\n",
-            "22511A                                  1\n",
-            "PK/PARALL/CURB                          1\n",
-            "4001A                                   1\n",
-            "1564052                                 1\n",
-            "134200                                  1\n",
-            "8060ABC                                 1\n",
-            "22651F                                  1\n",
-            "22502AE                                 1\n",
-            "24252A                                  1\n",
-            "4008                                    1\n",
-            "21209A                                  1\n",
-            "5600A1                                  1\n",
-            "5200E1                                  1\n",
-            "22900H                                  1\n",
-            "87714                                   1\n",
-            "25502A                                  1\n",
-            "225110                                  1\n",
-            "08062                                   1\n",
-            "Name: Violation Description, Length: 795, dtype: int64 \n",
+            "NO PARK/STREET CLEAN      2536150\n",
+            "METER EXP.                1528072\n",
+            "RED ZONE                   648248\n",
+            "PREFERENTIAL PARKING       600951\n",
+            "DISPLAY OF TABS            537228\n",
+            "NO PARKING                 390977\n",
+            "DISPLAY OF PLATES          240181\n",
+            "WHITE ZONE                 195525\n",
+            "NO STOP/STANDING           157676\n",
+            "PARKED OVER TIME LIMIT     154800\n",
+            "PARKED OVER TIME LIM       136763\n",
+            "STANDNG IN ALLEY           122417\n",
+            "BLOCKING DRIVEWAY          109056\n",
+            "STOP/STAND PROHIBIT         96655\n",
+            "YELLOW ZONE                 92244\n",
+            "NO STOP/STAND               89283\n",
+            "NO EVIDENCE OF REG          86992\n",
+            "PARKED ON SIDEWALK          79643\n",
+            "18 IN. CURB/2 WAY           76527\n",
+            "EXCEED 72HRS-ST             74644\n",
+            "Name: Violation Description, dtype: int64 \n",
             "\n",
             "\n"
           ],
