--- a/SugarCRM_ICP_Logistic_Regression_Using_sklearn.ipynb
+++ b/SugarCRM_ICP_Logistic_Regression_Using_sklearn.ipynb
@@ -38,6 +38,27 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "MVsOTX3f9BP-",
+        "colab_type": "text"
+      },
+      "source": [
+        "Performed by:\n",
+        "\n",
+        "Ken Wood\n",
+        "\n",
+        "Marketing Data Scientist\n",
+        "\n",
+        "SugarCRM\n",
+        "\n",
+        "kwood@sugarcrm.com\n",
+        "\n",
+        "(919) 802-0065\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "XhwsQEl58tcx",
         "colab_type": "text"
       },
@@ -60,7 +81,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive/')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +187,7 @@
         "df[\"Net ARR\"] = df[\"Net ARR\"].astype(float)\n",
         "df.info()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,7 +255,7 @@
         "print(df.head())                                        # Print first 5 rows of dataframe.\n",
         "print(df.describe())                                    # Get some summary stats on the numeric variables"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,7 +303,7 @@
         "print('Percentage of opportunities that converted:', round((ones*100)/(zeros+ones),1),'%')\n",
         "print('Percentage of opportunities that did not convert:', round((zeros*100)/(zeros+ones),1),'%')"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,7 +340,7 @@
       "source": [
         "sns.countplot(x=df['Converted?'],palette='hls')"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -361,7 +382,7 @@
       "source": [
         "df.groupby('Converted?').mean()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -463,7 +484,7 @@
         "plt.ylabel('Number of Instances')\n",
         "plt.savefig('pur_fre_month_bar')"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -507,7 +528,7 @@
         "plt.ylabel('Number of Instances')\n",
         "plt.savefig('pur_fre_pout_bar')"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -551,7 +572,7 @@
         "plt.ylabel('Number of Instances')\n",
         "plt.savefig('pur_fre_pout_bar')"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -595,7 +616,7 @@
         "plt.ylabel('Number of Instances')\n",
         "plt.savefig('pur_fre_pout_bar')"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -639,7 +660,7 @@
         "plt.ylabel('Number of Instances')\n",
         "plt.savefig('pur_fre_pout_bar')"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -683,7 +704,7 @@
         "plt.ylabel('Number of Instances')\n",
         "plt.savefig('pur_fre_pout_bar')"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -791,7 +812,7 @@
         "df_vars=df.columns.values.tolist()\n",
         "df_vars"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -873,7 +894,7 @@
         "df_final=df[to_keep]\n",
         "df_final.columns.values"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -926,7 +947,7 @@
       "source": [
         "df_final.head()"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1273,7 +1294,7 @@
         "print(selector.support_)\n",
         "print(selector.ranking_)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1358,11 +1379,11 @@
       "metadata": {
         "id": "OpCnFcfITwFZ",
         "colab_type": "code",
+        "outputId": "ef54c02e-46f8-4779-e4e1-82f5de3a84aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 408
-        },
-        "outputId": "ef54c02e-46f8-4779-e4e1-82f5de3a84aa"
+        }
       },
       "source": [
         "import statsmodels.api as sm\n",
@@ -1370,7 +1391,7 @@
         "result=logit_model.fit()\n",
         "print(result.summary2())"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1446,11 +1467,11 @@
       "metadata": {
         "id": "5ztkD_spUtCE",
         "colab_type": "code",
+        "outputId": "e3f0cbb0-feaf-4409-c1c2-118399a94215",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 190
-        },
-        "outputId": "e3f0cbb0-feaf-4409-c1c2-118399a94215"
+        }
       },
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
@@ -1459,7 +1480,7 @@
         "logreg = LogisticRegression()\n",
         "logreg.fit(X_train, y_train)"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1504,17 +1525,17 @@
       "metadata": {
         "id": "_tuVmCYDVPRY",
         "colab_type": "code",
+        "outputId": "cbd5823c-6576-4cc2-f7d7-c8afd9541759",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cbd5823c-6576-4cc2-f7d7-c8afd9541759"
+        }
       },
       "source": [
         "y_pred = logreg.predict(X_test)\n",
         "print('Accuracy of logistic regression classifier on test set: {:.2f}'.format(logreg.score(X_test, y_test)))"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1540,18 +1561,18 @@
       "metadata": {
         "id": "jdVdX8dAVsp6",
         "colab_type": "code",
+        "outputId": "10e62b6e-fafd-40f2-d2b1-878c669bed22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "10e62b6e-fafd-40f2-d2b1-878c669bed22"
+        }
       },
       "source": [
         "from sklearn.metrics import confusion_matrix\n",
         "confusion_matrix = confusion_matrix(y_test, y_pred)\n",
         "print(confusion_matrix)"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1592,17 +1613,17 @@
       "metadata": {
         "id": "qIZs2H3DWqhR",
         "colab_type": "code",
+        "outputId": "9a403aae-1aaf-4a8d-e4ed-aa5ef4d5ffdf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        },
-        "outputId": "9a403aae-1aaf-4a8d-e4ed-aa5ef4d5ffdf"
+        }
       },
       "source": [
         "from sklearn.metrics import classification_report\n",
         "print(classification_report(y_test, y_pred))"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1646,11 +1667,11 @@
       "metadata": {
         "id": "i5m0YhoNYyTx",
         "colab_type": "code",
+        "outputId": "3431622f-b97e-4fa6-980d-fbf743cd8f4e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 301
-        },
-        "outputId": "3431622f-b97e-4fa6-980d-fbf743cd8f4e"
+        }
       },
       "source": [
         "from sklearn.metrics import roc_auc_score\n",
@@ -1669,7 +1690,7 @@
         "plt.savefig('Log_ROC')\n",
         "plt.show()"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
