--- a/Harvard_Art_Museum_API.ipynb
+++ b/Harvard_Art_Museum_API.ipynb
@@ -32,11 +32,13 @@
         "colab_type": "text"
       },
       "source": [
-        "## The requests library\n",
+        "## Harvard Art Museum API Assignment - Thinkful\n",
         "\n",
-        "The easiest way to make API requests in Python is with the aptly-named requests library. This library is not built-in to the Python programming language, and usually, you would need to download and install it in order to use it. However, because we're doing all our development using Colab, this is not necessary. Because requests is such a popular library, Google has pre-installed it in the Colab environment.\n",
+        "Ken Wood\n",
         "\n",
-        "To start using the requests library you need to import it."
+        "Technical Expert - Data Analytics\n",
+        "\n",
+        "kwood@thinkful.com"
       ]
     },
     {
